--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .snakemake*
+large-scale-jensenlab-tagger/*tsv
+large-scale-jensenlab-tagger/*txt
+large-scale-jensenlab-tagger/pubmed
+large-scale-jensenlab-tagger/pmc
