--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CoNECo-transformer-ner"]
 	path = CoNECo-transformer-ner
 	url = https://github.com/katnastou/CoNECo-transformer-ner.git
+[submodule "CoNECo-transformer-tagger"]
+	path = CoNECo-transformer-tagger
+	url = https://github.com/katnastou/CoNECo-transformer-tagger.git
